change hibenrtae dialect lib version